# knowledge-base

./: CMakeLists.txt  README.md  functions.cpp  functions.h  main.cpp
rdf/: facts.rdf
report/: knowledge_base.tex
